syntax = "proto3";

package trellis.examples.proto;

message HelloWorld {
  string name = 1;
  uint32 id = 2;
  string msg = 3;
}
